scss/core/helpers/resources/flex-idx-search-filter.scss
$colorp: #333333;

@keyframes bajando {
	from {
		top: -50px;
		opacity:0;

		@media screen and (min-width: 1024px) {
			top: -100px;
		}
	}

	to {
		top: 0;
		opacity: 1;
	}
}

// MIXINS

	@mixin flexpa(){
		display: flex;
		justify-content: center;
		align-items: center;
	}

	@mixin ibfont(){
		font-family: "idx-boost-icons" !important;
		font-style: normal !important;
		font-weight: normal !important;
		font-variant: normal !important;
		text-transform: none !important;
		speak: none;
		line-height: 1;
		-webkit-font-smoothing: antialiased;
		-moz-osx-font-smoothing: grayscale;
	}
//

// SEARCH

	// HEADER
		.ib-filter-container {
			position: relative;
			margin-top: -1px;

			&.ib-filter-container-fixed {
				position: fixed;
				width: 100%;
				background-color: #fff;
				top: 0;
				left:0;
				z-index: 36; // para sobreponer a la cabezera
			}

			@media screen and (max-width: 989px) {
				&.ib-filter-container-inscroll {
					position: fixed;
					width: 100%;
					background-color: #fff;
					top: 0;
					left:0;
					z-index: 31; // para sobreponer a la cabezera
				}
			}

			@keyframes bajando {
				from {
					top: -50px;
					opacity:0;

					@media screen and (min-width: 1024px) {
						top: -100px;
					}
				}

				to {
					top: 0;
					opacity: 1;
				}
			}

			@media screen and (min-width: 768px) {
				box-shadow: 1px 1px 2px rgba(#000, .1);
			}

			@media screen and (min-width: 1024px) {
				z-index: 6;
			}
		}

		// para tema LG
			@media screen and (max-width: 989px) {
				.lg-theme {
					.ib-filter-container.ib-filter-container-inscroll {
						position: fixed;
						width: 100%;
						top: 101px;
						left:0;
						z-index: 31;
						animation: toTop .5s linear;

						&.ib-filter-container-fixed {
							top: 0;
							z-index: 36;
						}
					}

					@keyframes toTop {
						from {
							opacity: 0;
							top: 80px;
						}

						to {
							opacity: 1;
							top: 101px;
						}
					}
				}
			}

			body:not(.lg-theme) {
				.ib-filter-container {
					&.ib-filter-container-fixed, &.ib-filter-container-inscroll {
						animation: bajando .3s linear;
					}
				}
			}
		//

		@media screen and (max-width: 767px) {
			.ib-fhpb, .ib-fhpa .ib-fhpa-directbtns {
				display: none;
			}
		}

		.ib-fheader {
			position: relative;

			@media screen and (min-width: 990px) {
				z-index: 6;
			}

			@media screen and (min-width: 1024px) {
				display: flex;
				justify-content: center;
			}
		}

		// wrappers 
			.ib-fhpa {
				border: 1px solid #E5E5E5;
				//border-left: none;
				border-right: none;
				display: flex;
				height: 42px;
				display: flex;
				justify-content: center;
				flex-wrap: nowrap;

				@media screen and (min-width: 640px) {
					height: 47px;
				}

				@media screen and (min-width: 768px) {
					height: 50px;

					.ib-fhpa-advanced {
						display: none;
					}
				}

				@media screen and (min-width: 1024px) {
					flex-grow: 1;
					//min-width: 327px;
				
					.ib-fhpa-directbtns {
						display: none;
					}
				}

				@media screen and (min-width: 1280px) {
					max-width: 500px;
					//min-width: 345px;
				}
			}

			.ib-fhpb {
				height: 50px;
				border-bottom: 1px solid #E5E5E5;

				@media screen and (min-width: 1024px) {
					display: flex;
					justify-content: center;
					border-top: 1px solid #E5E5E5;
				}

				@media screen and (min-width: 1280px) {
					flex-grow: 1;
				}
			}  
		//


		// semi general
			.ib-fmsubmit, .ib-badvanced {
				overflow: hidden;
				position: relative;
				@include flexpa();

				&:before {
					color: #fff;
					@include flexpa();
				}

				.ib-btext {
					position: absolute;
					top: -400px;
					left:0;
				}
			}
		//


		// Mini Search
			.ib-fhpa-minisearch {
				display: flex;
				justify-content: center;
				height: 100%;
				flex-grow: 1;
				position: relative;

				&:not(.ib-fhpa-minisearch-active) {
					.ib-fcities {
						display:none;
					}
				}

				.ib-fcities {
					position: absolute;
					top: 100%;
					left: 0;
					background-color: #fff;
					width: 100%;
					z-index: 11;
					box-shadow: 2px 2px 2px rgba(0,0,0,0.2);
				}
			}

			.ib-fmsearch {
				padding: 5px 9px;
				flex-grow: 1;
				font-size: .85em;
			}

			.ib-fmsubmit {
				width: 40px;
				background-color: $colorp;

				@media screen and (min-width: 640px) {
					width: 45px;
				}
			}
		//

		// Advanced button
			.ib-fhpa-advanced {
				width: 82px;

				@media screen and (min-width: 480px) {
					width: 122px;
				}
			}

			.ib-badvanced {
				height: 100%;
				transition: all .3s linear;
				font-weight: 600;
				font-size: .85em;

				&:before {
					color: $colorp;
					font-size: 1.75em;
					transition: all .3s linear;
					margin-left: 5px;
					order: 1;
				}

				&:hover {
					cursor:pointer;
				}

				&.ib-badvanced-active {
					&:before {
						transform: rotate(180deg);
					}
				}

			}

			.ib-bmore {
				@media screen and (max-width: 479px) {
					display: none;
				}

				@media screen and (min-width: 480px) {
					margin-right: 5px;	
				}
			}
		//

		// Direct Buttons
			.ib-fhpa-directbtns {
				background-color: #F0F0F0;
				height: 100%;
				@include flexpa();

				.ib-btext {
					font-size: .7em;
				} 

				&:before {
					content: "";
					@include flexpa();
					height: 100%;
					background-color: #fff;
					width: 1px;
					order: 1;
				}
			}

			.ib-dbitem {
				width: 70px;
				height: 100%;
				transition: all .3s linear;

				@include flexpa();
				flex-direction: column;
				text-transform: uppercase;
				

				&:before {
					margin-bottom:5px;
					color: $colorp;
					transition: all .3s linear;
				}

				&:hover {
					background-color: $colorp;
					color: #fff;
					cursor:pointer;

					&:before {
						color: #fff;
					}
				}
			}

			.ib-dbclear {
				order:0;
			}

			.ib-dbsave {
				order: 2;
			}
/* ... */

